Fixed IEy and IE8 layout issues.
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@29314 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocEnumValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocEnumValue.css
@@ -56,3 +56,17 @@ body.webkit span.bocEnumValue select[size="3"]
 {
   vertical-align: text-bottom;
 }
+
+body.msie7 .bocEnumValue td label
+{
+  vertical-align: 2px;
+}
+body.msie8 .bocEnumValue td label
+{
+  vertical-align: 0.1em;
+}
+
+body.msie8 span.bocEnumValue select
+{
+  padding-bottom: 1px;
+}
